--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,22 +38,24 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  purple:     #7692FF
 );
 
+$tabs-background: #494A49;
 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
-
+$tabs-ios-tab-icon-color: #f4f4f4;
 
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-
+$tabs-md-tab-icon-color: #f4f4f4;
 
 
 // App Windows Variables
@@ -61,7 +63,7 @@ $colors: (
 // Windows only Sass variables can go here
 
 
-
+$tabs-wp-tab-icon-color: #f4f4f4;
 
 // App Theme
 // --------------------------------------------------
